--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Pirata+One:400");
 html {
   font-size: 10px;
   font-family: sans-serif;
@@ -7,7 +8,7 @@ p {
   line-height: 1.5;
 }
 h1 {
-  font-family: billabong, "billabongregular";
+  font-family: "Pirata One", sans-serif;
   text-align: center;
   font-weight: 100;
   font-size: 13rem;
@@ -23,7 +24,7 @@ h1 a {
 h1 a:focus {
   outline: 0;
 }
-@font-face {
+/* @font-face {
   font-family: "billabongregular";
   src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot");
   src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot?#iefix")
@@ -36,7 +37,8 @@ h1 a:focus {
       format("svg");
   font-weight: normal;
   font-style: normal;
-}
+} */
+
 body {
   background: offwhite;
 }
